Enable GET /dashboard endpoint
New endpoint to return dashboard information
