# common/api/swagger.json
@@ -347,6 +347,34 @@
         }
       }
     },
+    "/dashboard": {
+      "get": {
+        "operationId": "dashboard",
+        "x-loopback-model": "WaybookUser",
+        "description": "Returns dashboard data",
+        "summary": "Dashboard information",
+        "tags": [
+          "dashboard"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Collection"
+            }
+          },
+          "default": {
+            "description": "Unexpected error",
+            "schema": {
+              "$ref": "#/definitions/UnexpectedError"
+            }
+          }
+        }
+      }
+    },
     "/explorations": {
       "get": {
         "operationId": "indexExploration",
